[editor] AttachSourcesProvider::getActions signature refactored #EA-529978 fixed
explicit nullability, wildcards

GitOrigin-RevId: ffdb1fe827b6f3fd171cadfe1888c5ba9e29a817